--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
+  <script
+  type="text/javascript"
+  src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
